--- a/index.html
+++ b/index.html
@@ -1,22 +1,11 @@
-<html>
-    <head>
-        <title>Basic Html structure</title>
-        <body>
-            
-<P>In today’s digital landscape, businesses seek effective <b>digital marketing </b>partners to drive growth and visibility.<br> Digisnare stands out as a top provider, leveraging strategic digital marketing to target and reach the right customers. <br>Our experienced team uses advanced technologies to identify, track, and engage potential customers, converting them into loyal clients. <br>By employing cutting-edge methodologies, we help increase your website traffic and build your brand. <br>This strategic approach not only enhances your online presence but also boosts revenue, positioning your business for long-term success in the competitive digital market.</P>
-<h2>Search Engine Optimization</h2>
-<img src="image/welcome.png"alt="SEO"></img src>
-
-<p>The competition is very hard in online marketing as no one knows which brand might set up in the growing world and grow larger than you which might affect your business. So, get the training in SEO and always keep your business up to date and rank in the top position to gain good traffic.</p>
-<h1>SEO Modules</h1>
-<ul>
-    <li> Module 1: Understanding Website Design & Architecture</li>
-    <li>Module 2: Buying Domain and Hosting the Domain</li>
-    <li>Module 3: WordPress Blog Design And Installation</li>
-<img src="image/wecome.png"alt="welcome"></img src>
-</ul>
-</body>
-    </head>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
     
+</body>
 </html>
